<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_PwrMgmt_HAWino_In" Id="{875e0e2c-a3c6-40c3-a161-018e63d943a9}">
    <Declaration><![CDATA[TYPE ST_PwrMgmt_HAWino_In :
STRUCT
	nRobotNumber			: INT;
	tTimestamp				: TIME;		// The smallest unit of time is one millisecond. Example: T#82m47s295ms
	fSoC					: LREAL;
	fActualBatteryCurrent	: LREAL;
	fActualBatteryVoltage	: LREAL;
	fBatteryTemperature		: LREAL;
	nEstimatedRunningTime	: UDINT;	
	nEstimatedChargingTime	: UDINT;	
	bCheckCurrentDetected	: BOOL;		// 1. Bezeichnung: bNoChargingCurrent
	bComCheckAnswer			: BOOL;		// HAWino answer for communication check
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>