<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_PwrMgmt_HAWino_Out" Id="{df863176-169d-4b16-be58-70303c30b253}">
    <Declaration><![CDATA[TYPE ST_PwrMgmt_HAWino_Out :
STRUCT
	bChargingActive					: BOOL;
	bExternalRecalibrationTrigger	: BOOL;
	fExternalRecalibrationValue		: LREAL;
	bComCheckRequest 				: BOOL;		// Request from charger to HAWino to test stable communication 
END_STRUCT 
END_TYPE
 ]]></Declaration>
  </DUT>
</TcPlcObject>